# wagmi-challenge-1

./: Cargo.toml  Dockerfile  README.md
src/: load_test.rs  main.rs
