[package]
name = "wagmi-challenge-1"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"  # Latest stable version for performance
serde = { version = "1.0", features = ["derive"] }  # JSON serialization
chrono = "0.4"  # UTC timestamps
serde_json = "1.0.140"
tokio = "1.45.0"
sonic-rs = "0.5.1"
