[package]
name = "wagmi-9000"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
sonic-rs = "0.4"
chrono = "0.4"
tokio = { version = "1.40", features = ["sync", "time", "macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[[bin]]
name = "load_test"
path = "src/load_test.rs"